# stlink-toolkit

./: .gitignore  HELP.txt  README.md  probes.json  pyproject.toml  update_probes.py
scripts/: install-deps-fedora.sh
stlink_toolkit/: __init__.py  __main__.py  cli.py  extensions.py  flash_speed_compare.py  gdb_server.py  log.py  otp.py  programmer.py  registry.py  runtime.py  selector.py  servers.py  sizes.py  stlink_wrapper.py  test_stlink_wrapper.py  usb.py
test-assets/dummy-elf/: dummy_zero.elf
